--- a/app/templates/credit_cards/index.html
+++ b/app/templates/credit_cards/index.html
@@ -262,7 +262,7 @@
         </div>
 
     <!-- Fancy Dark Mode Card -->
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center mt-2">
         <div class="d-flex justify-content-cente w-100" style="max-width: 320px;">
         <div class="border-top border-start border-end border-bottom rounded-3 p-3 w-100">
             <h5 class="mb-3 text-light">Select a year for the report</h5>
@@ -284,7 +284,7 @@
             </h3>
 
             <div class="chart-scroll">
-                <div class="chart-box">
+                <div class="chart-box" style="max-height: 320px;">
                     <canvas id="yearly-stats"></canvas>
                 </div>
             </div>
