new function to render a table dynamically

--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -36,6 +36,12 @@
     </div>
 </div>
 
+<div class="table-responsive border rounded-3 my-2">
+    <table id="cash-flow-table" class="table table-hover table-bordered text-start">
+        
+    </table>
+</div>
+
 <div class="border rounded-3 w-100 p-2">
     <h3 class="text-center">Yearly Total All Models</h3>
 
