edited context data

--- a/app/templates/accounts_payable/index.html
+++ b/app/templates/accounts_payable/index.html
@@ -293,7 +293,7 @@
                         <label for="" id="active-debts">Actives Debts: {{ actives }}</label>
                     </div>
                     <div>
-                        <label for="" id="remaining">Remaining to Collect: ${{ format_amount(ramaining_to_pay) }}</label>
+                        <label for="" id="remaining">Remaining to Pay: ${{ format_amount(ramaining_to_pay) }}</label>
                     </div>
                 </div>
             </div>
