--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -37,13 +37,19 @@
 </div>
 
 <div class="table-responsive border rounded-3 my-2">
+    <div 
+        class="d-flex justify-content-center align-items-center w-100 text-light fw-bold rounded-top-2" 
+        style="background-color: #3cb45cad; height: 42px;"
+    >
+        <p class="fs-4 p-2">Cash Flow (Table)</p>
+    </div>
     <table id="cash-flow-table" class="table table-hover table-sm text-start">
         
     </table>
 </div>
 
 <div class="border rounded-3 w-100 p-2">
-    <h3 class="text-center">Yearly Total All Models</h3>
+    <h3 class="text-center">Yearly Total All Modules</h3>
 
     <div class="chart-container">
         <canvas id="yearly-stats-all-models"></canvas>
@@ -51,6 +57,12 @@
 </div>
 
 <div class="table-responsive border rounded-3 my-2">
+    <div 
+        class="d-flex justify-content-center align-items-center w-100 text-light fw-bold rounded-top-2" 
+        style="background-color: #16dcffad; height: 42px;"
+    >
+        <p class="fs-4 p-2">Yearly Total All Modules (Table)</p>
+    </div>
     <table id="yearly-report-table" class="table table-hover  text-start">
         
     </table>
