--- a/app/templates/incomes/index.html
+++ b/app/templates/incomes/index.html
@@ -3,6 +3,12 @@
 {% block title %}Incomes{% endblock %}
 
 {% block content %}
+<style>
+    .custom-header th {
+        background-color: #1A2CA3;
+        color: white;
+    }
+</style>
 
     <div class="container w-100">
 
@@ -138,8 +144,8 @@
         </div>
         
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
-            <table class="table table-striped  table-hover">
-                <thead class="sticky-top">
+            <table class="table table-hover">
+                <thead class="custom-header sticky-top">
                     <tr>
                     <th scope="col"># Id</th>
                     <th scope="col">Amount</th>
