--- a/app/templates/accounts_payable/index.html
+++ b/app/templates/accounts_payable/index.html
@@ -4,6 +4,13 @@
 
 {% block content %}
 
+<style>
+    .custom-header th {
+        background-color: #ac8981;
+        color: white;
+    }
+</style>
+
     <div class=" w-100">
 
         <h2>Accounts Payable</h2>
@@ -216,8 +223,8 @@
         </div>
 
         <div class="table-responsive overflow-y-auto border rounded-3 mt-2" style="max-height: 457px;">
-            <table class="table table-striped  table-hover">
-                <thead class="sticky-top">
+            <table class="table table-borderless table-hover">
+                <thead class="custom-header sticky-top">
                     <tr>
                     <th scope="col"># Id</th>
                     <th scope="col">Name</th>
