--- a/app/templates/deposits/index.html
+++ b/app/templates/deposits/index.html
@@ -3,6 +3,12 @@
 {% block title %}Deposits{% endblock %}
 
 {% block content %}
+<style>
+    .custom-header th {
+        background-color: #624ea2;
+        color: white;
+    }
+</style>
 
     <div class=" w-100">
 
@@ -123,8 +129,8 @@
         </div>
 
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
-            <table class="table table-striped  table-hover">
-                <thead class="sticky-top">
+            <table class="table table-borderless  table-hover">
+                <thead class="custom-header sticky-top">
                     <tr>
                     <th scope="col"># Id</th>
                     <th scope="col">Amount</th>
