--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
 
             <!-- LEFT SIDE -->
-            <a class="navbar-brand" href="{{ url_for('home.index') }}">Home</a>
+            <a class="navbar-brand fs-2" href="{{ url_for('home.index') }}"><i class="bi bi-house-fill"></i></a>
 
             <button class="navbar-toggler" type="button" 
                     data-bs-toggle="collapse" 
@@ -24,6 +24,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('home.index') }}">Home</a>
+                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('bank.index') }}">Banks</a>
                     </li>
