--- a/app/templates/bank_accounts/index.html
+++ b/app/templates/bank_accounts/index.html
@@ -13,8 +13,8 @@
     /* Force chart to stay wide */
     .chart-box {
         width: 100%;
-        min-width: 100%;   /* 👈 key: forces horizontal scroll */
-        height: 450px;
+        min-width: 100%;   /* key: forces horizontal scroll */
+        height: 380px;
     }
 
     .chart-box canvas {
