horizontal scroll for chart in smaller screens

--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -84,7 +84,7 @@
         class="d-flex justify-content-center align-items-center w-100 text-light fw-bold rounded-top-2" 
         style="background-color: #3cb45cad; height: 42px;"
     >
-        <p class="fs-4 p-2">Yearly Cash Flow (Table)</p>
+        <p class="fs-4 p-2 w-100">Yearly Cash Flow (Table)</p>
     </div>
     <table id="cash-flow-table" class="table table-hover table-sm text-start">
         
