--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -189,10 +189,10 @@
             <div class="d-flex flex-column flex-md-row align-items-stretch align-items-md-center gap-2">
                 <div class="d-flex gap-2">
                     <button type="button" 
-                            class="btn btn-outline-primary" 
+                            class="btn btn-loans-outline-custom" 
                             data-bs-toggle="modal" 
                             data-bs-target="#create-account-receivable">
-                        New Account Receivable 
+                        <span class="fw-bold">New Account Receivable</span> 
                     </button>
                     <a 
                         href="{{ url_for('accounts_receivable.see_all_loan_payments' ) }}" 
