--- a/app/templates/expenses/index.html
+++ b/app/templates/expenses/index.html
@@ -171,11 +171,12 @@
             <button 
                 type="button"
                 id="btn-create-expense-id"
-                class="btn btn-outline-primary me-auto me-md-auto w-100 w-md-auto" 
+                class="btn btn-expenses-outline-custom me-auto me-md-auto w-100 w-md-auto" 
                 style="max-width: 200px;"
                 data-bs-toggle="modal"
                 data-bs-target="#create-expense"
-            >New expense
+            >
+                <span class="fw-bold">New expense</span>
             </button>
             <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
                 <div class="w-100 w-md-auto mt-md-0" style="max-width: 320px;">
