--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -6,6 +6,7 @@
     <title>{% block title %} Be Aware {% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='appereance.css') }}">
 </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-primary fixed-top mx-2 mx-auto navbar-dark">
