--- a/app/templates/withdrawals/index.html
+++ b/app/templates/withdrawals/index.html
@@ -108,12 +108,13 @@
         <div class="d-flex justify-content-start gap-1 flex-wrap flex-md-nowrap mt-2">
             <button 
                 type="button"
-                id="btn-create-expense-id"
-                class="btn btn-outline-primary me-auto me-md-auto w-100 w-md-auto" 
+                id="btn-create-withdrawal-id"
+                class="btn btn-withdrawal-outline-custom me-auto me-md-auto w-100 w-md-auto" 
                 style="max-width: 200px;"
                 data-bs-toggle="modal"
                 data-bs-target="#create-withdrawal-model"
-            >New Withdrawal <i class="bi bi-coin"></i>
+            >
+                <span class="fw-bold">New Withdrawal</span>
             </button>
             <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
                 <div class="w-100 w-md-auto mt-md-0" style="max-width: 320px;">
