--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -32,7 +32,7 @@
 </style>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css' ) }}">
 
-<h5>Home</h5>
+<p class="fs-4 fw-bold text-light">Home</p>
 <!-- Fancy Dark Mode Card -->
 <div class="d-flex justify-content-center my-2">
     <div class="d-flex justify-content-cente w-100" style="max-width: 320px; height: 110px;">
