--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -83,7 +83,7 @@
     </nav>
 
 
-    <main class="container w-100 mt-5 p-4">
+    <main class="container w-100 p-4" style="margin-top: 55px;">
     {% block content %}
         
     {% endblock %}
